--- a/json-streamly.cabal
+++ b/json-streamly.cabal
@@ -30,9 +30,10 @@ library
     -- other-extensions:
     build-depends:    base >=4.12.0.0
                     , streamly >= 0.8.0
+                    , streamly-core
                     , json-stream >= 0.4.2
                     , streamly-bytestring >= 0.1.3
-                    , aeson < 2
+                    , aeson < 2.2
                     , exceptions >= 0.1.0
                     , monad-control >= 1.0
     hs-source-dirs:   src
